--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<!-- Head todo la info que es para el navegador y no se ve, salvo el titulo. -->
 	<meta charset="UTF-8">
-	<title>Malicius Culebra</title>
+	<title>CeatCf</title>
 	<!-- Estilos de Bootstrap que es codigo responsive y visual ya escrito por otro. -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
 	<!-- codigo de colores y estilos escrito por nosotros -->
