--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
 			<div class="col-md-3"></div>
 			<div class="col-md-5">
 				<ul class='botonera'>
-					<li><a href="#nosotros" data-ancla="nosotros">Quienes somos</a></li>
-					<li><a href="#servicios" data-ancla="servicios">Productos</a></li>
-					<li><a href="#contacto" data-ancla="contacto">Contacto</a></li>
+					<li><a href="#nosotros" data-ancla="nosotros">Confeciones</a></li>
+					<li><a href="#servicios" data-ancla="servicios">ChatCf</a></li>
 
 				</ul>
 
@@ -37,10 +36,9 @@
 </header>
 
 <div class="principal vertical-centered-text" id="home">
-	<div class="col-md-8 cta"><h1>Malicius Culebra</h1> 
-			<h4>Somos banda under de Berazategui y estamos sacando un nuevo disco</h4>
-			<p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-<a  href="https://open.spotify.com/artist/2tYH34FkTCemctfG3gChQE" class="btn btn-primary orange">ESCCUCHA CULEBRRA</a>
+	<div class="col-md-8 cta"><h1>CEAT CF</h1> 
+			<h4>Aquie tendras un chat en vivo para hablar con todos</h4>
+<a  href="https://open.spotify.com/playlist/37i9dQZF1DX5hIsIIk6w1F?si=5fea121f9ad84569">ESCCUCHA</a>
 
 
 		</div>
